@@ -5,7 +5,7 @@
 
   <groupId>de.tuberlin</groupId>
   <artifactId>onedrivesdk</artifactId>
-  <version>0.0.9v</version>
+  <version>0.0.10v</version>
 
   <scm>
     <url>https://github.com/umjammer/OneDriveJavaSDK</url>
@@ -18,7 +18,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
+        <version>3.12.1</version>
         <configuration>
           <release>17</release>
         </configuration>
@@ -26,17 +26,16 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.2</version>
+        <version>3.2.5</version>
         <configuration>
           <trimStackTrace>false</trimStackTrace>
           <argLine>
-            -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
             --add-opens java.base/java.net=ALL-UNNAMED
             --add-opens java.base/java.io=ALL-UNNAMED
             --add-opens java.base/java.lang=ALL-UNNAMED
             --add-opens java.base/java.lang.ref=ALL-UNNAMED
             --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
-            --add-opens java.logging/java.util.logging=ALL-UNNAMED
             --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
           </argLine>
         </configuration>
@@ -44,12 +43,19 @@
     </plugins>
   </build>
 
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.10.1</version>
+        <version>5.14.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -60,7 +66,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>32.0.0-jre</version>
+      <version>33.5.0-jre</version>
     </dependency>
     <dependency>
       <groupId>com.squareup.okhttp3</groupId>
@@ -81,13 +87,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.10.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>2.20.0</version>
+      <version>2.13.2</version>
     </dependency>
 
     <dependency>
@@ -121,15 +121,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>2.20.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-jul</artifactId>
-      <version>2.17.1</version>
+      <groupId>com.github.umjammer</groupId>
+      <artifactId>vavi-commons</artifactId>
+      <version>1.1.16</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
